<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="single_player">Single Player</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="local_multiplayer">Local Multiplayer</string>

    <string name="game_title">
        <font color="#fed032">T</font>
        <font color="#eb1751">I</font>
        <font color="#fed032">C</font>
        <font color="#fed032">\n</font>
        <font color="#eb1751">T</font>
        <font color="#fed032">A</font>
        <font color="#eb1751">C</font>
        <font color="#fed032">\n</font>
        <font color="#fed032">T</font>
        <font color="#eb1751">O</font>
        <font color="#fed032">E</font>
    </string>

    <string name="select_difficulty">Select Difficulty</string>
    <string name="easy_bot">Easy Bot</string>
    <string name="difficult_level_image">Difficult difficulty level icon</string>
    <string name="difficult_bot">Difficult Bot</string>
    <string name="medium_difficulty_level_image">Medium difficulty level icon</string>
    <string name="medium_bot">Medium Bot</string>
    <string name="easy_difficulty_level_image">Easy difficulty level icon</string>
    <string name="opponent" translatable="false">Opponent</string>
    <string name="toolbar_menu">Game Menu</string>
    <string name="toolbar_difficulty">Choose Difficulty</string>
    <string name="toolbar_bot">Tic-Tac-Toe: Bot</string>
    <string name="toolbar_settings">Tic-Tac-Toe: Settings</string>
    <string name="toolbar_game_result">Game Over: Play Again?</string>
    <string name="toolbar_local_multiplayer">Tic-Tac-Toe: Local Multiplayer</string>
    <string name="toolbar_lobby">Tic-Tac-Toe: Waiting Room</string>
    <string name="toolbar_multiplayer">Tic-Tac-Toe: Multiplayer</string>
    <string name="player_avatar">Player Avatar</string>
    <string name="bot_avatar">Bot Avatar</string>
    <string name="player_human">Human Player</string>
    <string name="player_bot">Bot Player</string>
    <string name="you_turn">Your Turn</string>
    <string name="toolbar_edit_profile">Edit Profile</string>
    <string name="done">Done</string>
    <string name="enter_your_nickname">Enter Your Nickname</string>
    <string name="nickname">Nickname</string>
    <string name="save_changes">Save Changes</string>
    <string name="char_count_tv">%d/15</string>
    <string name="settings">Settings</string>
    <string name="add_room">Add room</string>
    <string name="who_goes_first">Who goes first?</string>
    <string name="random">Random</string>
    <string name="select_photo">Select Photo</string>
    <string name="your_symbol">Your Symbol</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="you">You</string>
    <string name="play_as_o">Play as O</string>
    <string name="computer">Computer</string>
    <string name="play_as_x">Play as X</string>
    <string name="avatar">Avatar</string>
    <string name="button_refresh">Refresh Button</string>
    <string name="you_win">YOU WIN!</string>
    <string name="you_lose">YOU LOSE!</string>
    <string name="draw">DRAW!</string>
    <string name="bot_turn">Bot Turn</string>
    <string name="opponent_turn">Opponent Turn</string>
    <string name="available_games">Available Games:</string>
    <string name="play">Play</string>
    <string name="create_new_room">Create New Room</string>
    <string name="room_name">Room Name:</string>
    <string name="enter_room_name">Enter room name…</string>
    <string name="password_protected_game">Password Protected Game</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter password…</string>
    <string name="create">Create</string>
    <string name="error_room_name_required">Please enter room name</string>
    <string name="error_nickname_too_long">Nickname is too long</string>
    <string name="waiting_for_opponent">Waiting for opponent…</string>
    <string name="join">Join</string>
    <string name="error_room_not_found">Room not found or already closed</string>
    <string name="error_room_delete_failed">Error deleting room</string>
    <string name="error_fetch_rooms">Failed to load rooms. Please try again.</string>
    <string name="error_create_room">Failed to create room. Please try again.</string>
    <string name="error_sign_in_room_password">Failed to join room. Check the password and try again.</string>
    <string name="error_sign_in_room">Failed to join room.</string>
</resources>