<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints">

    <include layout="@layout/snowfall_background" />

    <View
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:background="@drawable/v_line"
        app:layout_constraintStart_toStartOf="@id/tv_select_difficulty"
        app:layout_constraintTop_toBottomOf="@id/tv_select_difficulty"
        app:layout_constraintWidth_percent="0.55" />

    <TextView
        android:id="@+id/tv_select_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:lines="1"
        android:text="@string/select_difficulty"
        android:textColor="@color/white"
        android:textSize="@dimen/difficulty_tv"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_easy"
        style="@style/bt_difficulty"
        android:background="@drawable/bt_easy_bot"
        android:text="@string/easy_bot"
        app:layout_constraintBottom_toTopOf="@id/bt_medium"
        app:layout_constraintTop_toBottomOf="@id/tv_select_difficulty" />

    <ImageView
        style="@style/ic_difficulty"
        android:contentDescription="@string/easy_difficulty_level_image"
        android:src="@drawable/easy_bot"
        app:layout_constraintBottom_toBottomOf="@id/bt_easy"
        app:layout_constraintEnd_toStartOf="@id/bt_easy"
        app:layout_constraintTop_toTopOf="@id/bt_easy" />

    <Button
        android:id="@+id/bt_medium"
        style="@style/bt_difficulty"
        android:background="@drawable/bt_medium_bot"
        android:text="@string/medium_bot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_select_difficulty" />

    <ImageView
        style="@style/ic_difficulty"
        android:contentDescription="@string/medium_difficulty_level_image"
        android:src="@drawable/medium_bot"
        app:layout_constraintBottom_toBottomOf="@id/bt_medium"
        app:layout_constraintEnd_toStartOf="@id/bt_medium"
        app:layout_constraintTop_toTopOf="@id/bt_medium" />

    <Button
        android:id="@+id/bt_difficult"
        style="@style/bt_difficulty"
        android:background="@drawable/bt_difficult_bot"
        android:text="@string/difficult_bot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_medium" />

    <ImageView
        style="@style/ic_difficulty"
        android:contentDescription="@string/difficult_level_image"
        android:src="@drawable/difficult_bot"
        app:layout_constraintBottom_toBottomOf="@id/bt_difficult"
        app:layout_constraintEnd_toStartOf="@id/bt_difficult"
        app:layout_constraintTop_toTopOf="@id/bt_difficult" />

</androidx.constraintlayout.widget.ConstraintLayout>