<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="MissingConstraints">

    <include layout="@layout/snowfall_background" />

    <TextView
        android:id="@+id/tv_game_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:fontFamily="@font/main_title"
        android:gravity="center"
        android:lines="3"
        android:maxLines="3"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="-30"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/game_title"
        android:textSize="110sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/bt_single_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_single_player"
        style="@style/bt_main_menu"
        android:layout_marginTop="35dp"
        android:background="@drawable/bt_glow_magenta"
        android:text="@string/single_player"
        app:layout_constraintTop_toBottomOf="@id/tv_game_title" />

    <Button
        android:id="@+id/bt_multiplayer"
        style="@style/bt_main_menu"
        android:layout_marginTop="20dp"
        android:background="@drawable/bt_sunset_glow"
        android:text="@string/multiplayer"
        app:layout_constraintTop_toBottomOf="@id/bt_single_player" />

    <Button
        android:id="@+id/bt_local_multiplayer"
        style="@style/bt_main_menu"
        android:layout_marginTop="20dp"
        android:background="@drawable/bt_ocean_sunrise"
        android:text="@string/local_multiplayer"
        app:layout_constraintTop_toBottomOf="@id/bt_multiplayer" />

</androidx.constraintlayout.widget.ConstraintLayout>
