<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_violet_blue"
    tools:ignore="MissingConstraints"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/begin_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        style="@style/tv_settings"
        android:id="@+id/tv_who_goes_first"
        android:text="@string/who_goes_first"
        app:layout_constraintStart_toEndOf="@id/begin_guide_line"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        style="@style/item_settings"
        android:id="@+id/v_item_human"
        app:layout_constraintTop_toBottomOf="@id/tv_who_goes_first" />

    <View
        style="@style/ic_bg_settings"
        android:id="@+id/v_human_avatar_bg"
        android:background="@drawable/v_line"
        app:layout_constraintBottom_toBottomOf="@id/v_item_human"
        app:layout_constraintStart_toStartOf="@id/v_item_human"
        app:layout_constraintTop_toTopOf="@id/v_item_human" />

    <ImageView
        style="@style/ic_settings"
        android:id="@+id/iv_human_avatar"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@id/v_human_avatar_bg"
        app:layout_constraintEnd_toEndOf="@id/v_human_avatar_bg"
        app:layout_constraintStart_toStartOf="@id/v_human_avatar_bg"
        app:layout_constraintTop_toTopOf="@id/v_human_avatar_bg"
        tools:src="@drawable/profile_avatar" />

    <TextView
        style="@style/item_tv_settings"
        android:text="@string/you"
        app:layout_constraintBottom_toBottomOf="@id/v_item_human"
        app:layout_constraintStart_toEndOf="@id/v_human_avatar_bg"
        app:layout_constraintTop_toTopOf="@id/v_item_human" />

    <View
        style="@style/item_settings"
        android:id="@+id/v_item_computer"
        app:layout_constraintTop_toBottomOf="@id/v_item_human" />

    <View
        style="@style/ic_bg_settings"
        android:id="@+id/v_computer_bg"
        android:background="@drawable/v_line"
        app:layout_constraintBottom_toBottomOf="@id/v_item_computer"
        app:layout_constraintStart_toStartOf="@id/v_item_computer"
        app:layout_constraintTop_toTopOf="@id/v_item_computer" />

    <ImageView
        style="@style/ic_settings"
        android:contentDescription="@null"
        android:src="@drawable/ic_robot"
        app:layout_constraintBottom_toBottomOf="@id/v_computer_bg"
        app:layout_constraintEnd_toEndOf="@id/v_computer_bg"
        app:layout_constraintStart_toStartOf="@id/v_computer_bg"
        app:layout_constraintTop_toTopOf="@id/v_computer_bg" />

    <TextView
        style="@style/item_tv_settings"
        android:text="@string/computer"
        app:layout_constraintBottom_toBottomOf="@id/v_item_computer"
        app:layout_constraintStart_toEndOf="@id/v_computer_bg"
        app:layout_constraintTop_toTopOf="@id/v_item_computer" />

    <View
        style="@style/item_settings"
        android:id="@+id/v_item_random_move"
        app:layout_constraintTop_toBottomOf="@id/v_item_computer" />

    <View
        style="@style/ic_bg_settings"
        android:id="@+id/v_rand_move_bg"
        android:background="@drawable/v_line"
        app:layout_constraintBottom_toBottomOf="@id/v_item_random_move"
        app:layout_constraintStart_toStartOf="@id/v_item_random_move"
        app:layout_constraintTop_toTopOf="@id/v_item_random_move" />

    <ImageView
        style="@style/ic_settings"
        android:contentDescription="@null"
        android:src="@drawable/ic_random"
        app:layout_constraintBottom_toBottomOf="@id/v_rand_move_bg"
        app:layout_constraintEnd_toEndOf="@id/v_rand_move_bg"
        app:layout_constraintStart_toStartOf="@id/v_rand_move_bg"
        app:layout_constraintTop_toTopOf="@id/v_rand_move_bg" />

    <TextView
        style="@style/item_tv_settings"
        android:text="@string/random"
        app:layout_constraintBottom_toBottomOf="@id/v_item_random_move"
        app:layout_constraintStart_toEndOf="@id/v_rand_move_bg"
        app:layout_constraintTop_toTopOf="@id/v_item_random_move" />

    <TextView
        style="@style/tv_settings"
        android:id="@+id/tv_your_symbol"
        android:text="@string/your_symbol"
        app:layout_constraintStart_toEndOf="@id/begin_guide_line"
        app:layout_constraintTop_toBottomOf="@id/v_item_random_move" />

    <View
        style="@style/item_settings"
        android:id="@+id/v_item_tac"
        app:layout_constraintTop_toBottomOf="@id/tv_your_symbol" />

    <View
        style="@style/ic_bg_settings"
        android:id="@+id/v_tac_bg"
        android:background="@drawable/v_line"
        android:backgroundTint="@color/raspberry_purple"
        app:layout_constraintBottom_toBottomOf="@id/v_item_tac"
        app:layout_constraintStart_toStartOf="@id/v_item_tac"
        app:layout_constraintTop_toTopOf="@id/v_item_tac" />

    <ImageView
        style="@style/ic_settings"
        android:contentDescription="@null"
        android:src="@drawable/tac"
        app:layout_constraintBottom_toBottomOf="@id/v_tac_bg"
        app:layout_constraintEnd_toEndOf="@id/v_tac_bg"
        app:layout_constraintStart_toStartOf="@id/v_tac_bg"
        app:layout_constraintTop_toTopOf="@id/v_tac_bg" />

    <TextView
        style="@style/item_tv_settings"
        android:text="@string/play_as_x"
        app:layout_constraintBottom_toBottomOf="@id/v_item_tac"
        app:layout_constraintStart_toEndOf="@id/v_tac_bg"
        app:layout_constraintTop_toTopOf="@id/v_item_tac" />

    <View
        style="@style/item_settings"
        android:id="@+id/v_item_tic"
        app:layout_constraintTop_toBottomOf="@id/v_item_tac" />

    <View
        style="@style/ic_bg_settings"
        android:id="@+id/v_tic_bg"
        android:background="@drawable/v_line"
        android:backgroundTint="@color/smoky_brown"
        app:layout_constraintBottom_toBottomOf="@id/v_item_tic"
        app:layout_constraintStart_toStartOf="@id/v_item_tic"
        app:layout_constraintTop_toTopOf="@id/v_item_tic" />

    <ImageView
        style="@style/ic_settings"
        android:contentDescription="@null"
        android:src="@drawable/tic"
        app:layout_constraintBottom_toBottomOf="@id/v_tic_bg"
        app:layout_constraintEnd_toEndOf="@id/v_tic_bg"
        app:layout_constraintStart_toStartOf="@id/v_tic_bg"
        app:layout_constraintTop_toTopOf="@id/v_tic_bg" />

    <TextView
        style="@style/item_tv_settings"
        android:text="@string/play_as_o"
        app:layout_constraintBottom_toBottomOf="@id/v_item_tic"
        app:layout_constraintStart_toEndOf="@id/v_tic_bg"
        app:layout_constraintTop_toTopOf="@id/v_item_tic" />

    <View
        style="@style/item_settings"
        android:id="@+id/v_item_random_mark"
        app:layout_constraintTop_toBottomOf="@id/v_item_tic" />

    <View
        style="@style/ic_bg_settings"
        android:id="@+id/v_rand_mark_bg"
        android:background="@drawable/v_line"
        app:layout_constraintBottom_toBottomOf="@id/v_item_random_mark"
        app:layout_constraintStart_toStartOf="@id/v_item_random_mark"
        app:layout_constraintTop_toTopOf="@id/v_item_random_mark" />

    <ImageView
        style="@style/ic_settings"
        android:contentDescription="@null"
        android:src="@drawable/ic_random"
        app:layout_constraintBottom_toBottomOf="@id/v_rand_mark_bg"
        app:layout_constraintEnd_toEndOf="@id/v_rand_mark_bg"
        app:layout_constraintStart_toStartOf="@id/v_rand_mark_bg"
        app:layout_constraintTop_toTopOf="@id/v_rand_mark_bg" />

    <TextView
        style="@style/item_tv_settings"
        android:text="@string/random"
        app:layout_constraintBottom_toBottomOf="@id/v_item_random_mark"
        app:layout_constraintStart_toEndOf="@id/v_rand_mark_bg"
        app:layout_constraintTop_toTopOf="@id/v_item_random_mark" />

    <Space
        android:id="@+id/center"
        android:layout_width="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/end_guide_line"
        app:layout_constraintStart_toEndOf="@id/begin_guide_line"
        app:layout_constraintTop_toBottomOf="@id/v_item_random_mark" />

    <Button
        style="@style/bt_settings"
        android:id="@+id/bt_cancel"
        android:backgroundTint="@color/profile_background"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/center"
        app:layout_constraintStart_toEndOf="@id/begin_guide_line"
        app:layout_constraintTop_toBottomOf="@id/v_item_random_mark" />

    <Button
        style="@style/bt_settings"
        android:id="@+id/bt_save"
        android:backgroundTint="@color/evergreen_depths"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/end_guide_line"
        app:layout_constraintStart_toEndOf="@id/center"
        app:layout_constraintTop_toBottomOf="@id/v_item_random_mark" />

</androidx.constraintlayout.widget.ConstraintLayout>
